--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,9 +31,10 @@ services:
       NEXT_PUBLIC_ENTRYPOINT: http://caddy
 
   caddy:
-    build:
-      context: api/
-      target: app_caddy
+    image: wheathare/tamagosaurus-caddy:latest
+    #build:
+    #  context: api/
+    #  target: app_caddy
     depends_on:
       - php
       - pwa
