fixed docker, fixtures, migrations and request.js

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       NEXT_PUBLIC_ENTRYPOINT: http://caddy
 
   caddy:
+    #image: wheathare/tamagosaurus-caddy:latest
     build:
       context: api/
       target: app_caddy
