--- a/api/composer.json
+++ b/api/composer.json
@@ -29,7 +29,7 @@
         "symfony/serializer": "6.2.*",
         "symfony/twig-bundle": "6.2.*",
         "symfony/validator": "6.2.*",
-        "symfony/webpack-encore-bundle": "^1.16",
+        "symfony/webpack-encore-bundle": "*",
         "symfony/yaml": "6.2.*"
     },
     "require-dev": {
