--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /.env
 /helm/api-platform/charts/*
 !/helm/api-platform/charts/.gitignore
+node_modules/.package-lock.json
+node_modules/.bin/yarn
+node_modules/*
