gitignore node modules

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 /.env
 /helm/api-platform/charts/*
 !/helm/api-platform/charts/.gitignore
-/node_modules/
-/vendor/
-composer.*
-package.json
-yarn.lock
+node_modules/.package-lock.json
+node_modules/.bin/yarn
+node_modules/*
